--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.13.0",
+    "helmet": "^6.0.0",
     "mysql": "^2.18.1"
+  },
+  "engines": {
+    "node": "16.13.1"
   }
 }
